@@ -263,7 +263,7 @@ public class SanadHesabdariForm extends
 //				String key = keyValue[0];
 //				String value = keyValue[1];
 //				
-//				Integer level = new Integer(key.substring("hesabTafsili".length()));
+//				Integer level = Integer.valueOf(key.substring("hesabTafsili".length()));
 //				ArticleTafsiliEntity articleTafsiliEntity = new ArticleTafsiliEntity();
 //				articleTafsiliEntity.setHesabTafsili(getHesabTafsiliService().load(new Long(value)));
 //				articleTafsiliEntity.setLevel(level);
@@ -286,7 +286,7 @@ public class SanadHesabdariForm extends
 //				String key = keyValue[0];
 //				String value = keyValue[1];
 //				
-//				Integer level = new Integer(key.substring("accountingMarkaz".length()));
+//				Integer level = Integer.valueOf(key.substring("accountingMarkaz".length()));
 //				ArticleAccountingMarkazEntity articleAccountingMarkazEntity = new ArticleAccountingMarkazEntity();
 //				articleAccountingMarkazEntity.setAccountingMarkaz(getAccountingMarkazService().load(new Long(value)));
 //				articleAccountingMarkazEntity.setLevel(level);
@@ -1508,8 +1508,8 @@ public class SanadHesabdariForm extends
             
             List<SanadHesabdariItemEntity> sanadHesabdariItemList = new ArrayList<SanadHesabdariItemEntity>();
             while ((line = reader.readNext()) != null) {
-            	int radif = new Integer(removeUTF8BOM(line[0]));
-            	int atf = new Integer(line[1]);
+            	int radif = Integer.valueOf(removeUTF8BOM(line[0]));
+            	int atf = Integer.valueOf(line[1]);
             	sanadHesabdariSerial = new Long(line[2]);
             	String moeenCode = line[3];
             	Long tafsilCode = null;
